# WiFi_CSI_Fall_Detection

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PRD.md  PROMPTS.md  README.md  config.py  pyproject.toml  requirements.txt  train.py
app/: __init__.py  cli.py  server.py
app/templates/: index.html
collector/: __init__.py  health.py  interfaces.py  packet_parser.py  receiver.py  replay.py  session_store.py
configs/: app.yaml  collection.yaml  dataset.yaml  inference.live_esp32.example.yaml  inference.yaml  preprocessing.yaml  training.yaml  training_baseline.yaml
configs/splits/: wifall_subject_split.yaml
dashboard/: app.py
dashboard/templates/: index.html
data_collection/: __init__.py  csi_simulator.py  data_logger.py  esp32_receiver.py  widar3_loader.py
datasets/: loader.py  manifest.py  torch_dataset.py
docs/: DATASET_AND_LABELING.md  ESP32_3NODE_LIVE_SMOKE_TEST.md  ESP32_SETUP_GUIDE.md  IMPLEMENTATION_PLAN.md  REALTIME_DASHBOARD_AND_ALERTS.md  SYSTEM_ARCHITECTURE.md  TEST_PLAN.md  TRAINING_KNN_MMD.md
evaluation/: __init__.py  evaluator.py
inference/: __init__.py  confirmation.py  live_source.py  replay.py
models/: classical_classifier.py  lstm_classifier.py
preprocessing/: __init__.py  advanced_signal_processor.py  dataset.py  decoder.py  feature_extractor.py  features.py  filters.py  pipeline.py  session_loader.py  signal_processor.py  windowing.py
realtime/: __init__.py  alerting.py  detector.py
scripts/: collect.py  demo_fall_scenario.py  eval_baseline.py  prepare_wifall.py  preprocess.py  replay_dashboard.py  send_udp_frames.py  summarize_raw_session.py  train_baseline.py  train_knn_mmd.py
shared/: __init__.py  config.py  models.py
tests/: conftest.py  test_app_cli.py  test_baseline_smoke.py  test_collect.py  test_collect_duration.py  test_collect_shutdown.py  test_config_loader.py  test_confirmation.py  test_dashboard_routes.py  test_decoder.py  test_esp32_source.py  test_eval_diagnostics.py  test_feature_pipeline.py  test_filters.py  test_health.py  test_inference_pipeline_smoke.py  test_live_source.py  test_manifest.py  test_packet_parser.py  test_prepare_wifall.py  test_prepare_wifall_integration.py  test_receiver.py  test_receiver_binary.py  test_replay.py  test_session_loader.py  test_session_store.py  test_sse_backpressure.py  test_summarize_raw_session.py  test_windowing.py
tests/fixtures/: esp32_adr018_truncated_packet.hex  (+4 more)
training/: __init__.py  model.py  trainer.py
