[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wifi-fall-detection"
version = "0.1.0"
description = "Single-room WiFi CSI fall detection MVP scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<3.0",
  "pydantic>=2.6,<3.0",
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.3,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "shared",
  "shared.*",
  "collector",
  "collector.*",
  "preprocessing",
  "preprocessing.*",
  "training",
  "training.*",
  "inference",
  "inference.*",
  "app",
  "app.*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
